最后文件提交

--- a/sys/iframe.html
+++ b/sys/iframe.html
@@ -144,7 +144,7 @@
 						<td >
 							<div class="form-row" style="padding-left: 25px;">
 								<label for="sallAmount" class="form-inline">单&nbsp;价:</label>
-							<input  type="text" class="form-control"  style="width: 120px;"  id="sallAmount" name="sallAmount" />
+							<input  type="text" class="form-control"  style="width: 120px;"  id="sallAmount" name="sallAmount" onblur="calulater()" />
 							</div>
 						</td>
 						<td >
