--- a/sys/orders.html
+++ b/sys/orders.html
@@ -420,6 +420,47 @@
 						}
 					}},
 				{"sTitle":"总额", "mDataProp": "amount","sClass": "center", "bSortable": false, "sWidth": "100",editable:true},
+				{"sTitle":"密码", "mDataProp": "remark","sClass": "center", "bSortable": false, "sWidth": "200",editable:true,
+					'createdCell': function(nTd, sData, oData, iRow, iCol){
+						// var prise = oData.sallAmount;
+						var state = oData.state;
+						var id = oData.id;
+						var sallAmount = oData.sallAmount;
+						var count = oData.count;
+						$(nTd).dblclick(
+								function(){
+									var td = $(this);
+									// 根据表格文本创建文本框 并加入表表中--文本框的样式自己调整
+									var text = td.text();
+									var txt = $("<input type='text' class='edit_text'>").val(text);
+									txt.blur(function() {
+										// 失去焦点，保存值。于服务器交互自己再写,最好ajax
+										var newText = $(this).val();
+										// 移除文本框,显示新值
+										$.ajax({
+											url:baseUrl+"option/updateRemark",
+											type:"get",
+											data:{id:id,remark:newText},
+											success:function (data){
+												$(this).remove();
+												td.text(newText);
+												location.href = "orders.html";
+												// window.location.href="orders2.html";
+												// $('#detail').DataTable().ajax.url(baseUrl+"/option/getOrderByOrderId").load();
+											}
+										});
+										// showdetail();
+										// $('#detail').DataTable().Rows[1][12] = "1";
+
+									});
+									td.text("");
+									td.append(txt);
+									txt.focus();
+								}
+
+						);
+						$(nTd).attr('title','双击可修改');
+					}},
 				{"sTitle":"创建人", "mDataProp": "userName","sClass": "center", "bSortable": false, "sWidth": "200"},
 				{"sTitle":"创建时间", "mDataProp": "createTime","sClass": "center", "bSortable": false, "sWidth": "200",mRender:function (data){
 						var date = new Date(data);
@@ -801,7 +842,7 @@
 				{"sTitle":"操作", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "100",mRender:function (data,cell){
 						var html ="";
 						// html+="<input type='button' onclick='editOne("+data+")' value='修改'></input>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
-						html+="<input type='button' class='btn-danger btn' onclick='deleteSonInfo(\""+data+"\")' value='删除子订单' /></br>";
+						html+="<input type='button' class='btn-danger btn' onclick='deleteSonInfo(\""+data+"\",\""+state+"\")' value='删除子订单' /></br>";
 						html+="<input type='button' class='btn-success btn' onclick='allPay(\""+data+"\")' value='开全款票据' /></br>";
 						html+="<input type='button' class='btn-dark btn'  data-toggle=\"modal\" data-target=\"#payModel\"   onclick='unPay(\""+data+"\")' value='开非全款票据' /></br>";
 						html+="<input type='button' class='btn-primary btn' onclick='payment(\""+data+"\")' value='已收全款' /></br>";
@@ -960,7 +1001,11 @@
 	}
 
 
-	function deleteSonInfo(id){
+	function deleteSonInfo(id,state){
+		if(state!='0'){
+			alert("订单已发货不能删除");
+			return false;
+		}
 		var confirm = window.confirm("确定删除本条子订单吗?");
 		if(confirm){
 			$.ajax({
